# blackice

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  REPORT.md  docker-compose.yml  pyproject.toml  ssot_check.sh
.github/workflows/: ci.yml  docker-build.yml  metrics-collector.yml
blackice/: __main__.py  replay_test.py  report.py  run_dashboard.py  run_dashboard_tokens.py  run_decisions.py  run_replay.py  run_token_graph.py
blackice/alerts/: schema.py
blackice/api/: app.py  schemas.py
blackice/cli/: main.py  replay.py  score.py  trust.py  validate.py
blackice/core/: alert.py
blackice/decision/: base.py  threshold.py
blackice/detections/: engine.py
blackice/evaluate/: adversarial_loop.py  make_report.py  make_sim_runs.py  replay.py  ring_eval.py  stealth_leaderboard.py  strategy_benchmark.py
blackice/features/: extract.py
docs/: DOCKER.md  FRAUD_RINGS.md  STEALTH_SCORING.md  THREAT_MODEL.md  TRUST.md  normalization.md
examples/: sim_runs_sample.jsonl
reports/: adversarial_loop_report.md  stealth_leaderboard.md  strategy_leaderboard.md
scripts/: collect_metrics.py  proof.sh  smoke.sh
tests/: test_adversarial_audit_gate.py  test_api_audit.py  test_api_hardening.py  test_api_integration.py  test_api_openapi.py  test_api_smoke.py  test_cli_imports.py  test_decisions_normalization.py  test_enforcement_applies_to_decisions.py  test_impossible_travel.py  test_normalization_regression.py  test_normalize_decisions.py  test_replay_produces_alerts.py  test_trust_emitter.py  test_trust_enforcement.py  test_trust_invariants.py
(+27 files in other folders)
